# ur_l

./: .bandit  .dockerignore  .env.template  .gitignore  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: bandit_security.yml  docker_build.yml
app/: .coveragerc  manage.py  pytest.ini
app/api/: admin.py  api_views.py  apps.py  helpers.py  models.py  serializers.py  throttle.py  urls.py  validators.py  views.py
app/api/static/: cookies-eu-banner.min.js  index.html  main.04951e8b6ad3719c12c1.js  main.474822e51013db3c9567.css  main.5f889976d4e3d1a6195b.js  main.eaf9429c300b96638096.css
app/api/static/favicon/: manifest.webapp
app/api/static/rest_framework/js/: coreapi-0.1.1.js
app/api/static/static/favicon/: browserconfig.xml  manifest.json  yandex-browser-manifest.json
app/api/templates/: .base.html.swp  404.html  base.html  index.html  main.html  robots.txt
app/api/templates/admin/edit_inline/: tabular_paginated.html
app/api/tests/: test_api.py  test_url.py
app/ur_l/: asgi.py  settings.py  urls.py  wsgi.py
app/ur_l/tests/: test_settings.py
docker/: Dockerfile  docker-entrypoint.sh  docker-entrypoint_dev.sh
nginx_docker/: Dockerfile  benchmark.json  benchmark_script.sh  nginx.conf
python_docker/: Dockerfile  docker-entrypoint.sh  docker-entrypoint_dev.sh  wait-for-postgres.sh
